<resources>
    <string name="app_name">HọcNóiTiếngViệt</string>


    <string name="text_read_along">Đọc theo</string>
    <string name="text_touch_read">Chạm và đọc</string>
    <string name="text_swipe_read">Vuốt và đọc</string>
    <string name="text_check">Kiểm tra</string>


    <string name="button_view_error_retry">Retry</string>

    <string name="err_network_timeout_title">Timeout</string>
    <string name="err_network_timeout_message">You\'re being timed out due to late response from the server side, please try again.</string>

    <string name="err_network_internet_title">No Internet Connection</string>
    <string name="err_network_internet_message">Uh oh..Looks like you are no longer connected to the Internet, reconnect and try again.</string>

    <string name="err_network_unexpected_title">Unexpected Error</string>
    <string name="err_network_unexpected_message">Unexpected error occurred, please try again.</string>

    <string name="err_network_client_title">Client Error</string>
    <string name="err_network_client_message">An error has occurred during request, please try again.</string>

    <string name="err_network_server_title">Server Error</string>
    <string name="err_network_server_message">The server encountered a temporary error and could not lead you to your destination, please try again.</string>


    <string name="title_menu_activity_main_navigation_view_general">General</string>
    <string name="title_menu_activity_main_navigation_view_latest_issue">Latest issue</string>
    <string name="title_menu_activity_main_navigation_view_advertise">Advertise</string>
    <string name="title_menu_activity_main_navigation_view_submit">Submit</string>
    <string name="title_menu_activity_main_navigation_view_jobs">Jobs</string>
    <string name="title_menu_activity_main_navigation_view_past_issues">Past issues</string>
    <string name="title_menu_activity_main_navigation_view_android_weekly">Android weekly</string>
    <string name="title_menu_activity_main_navigation_view_about">About</string>
    <string name="title_menu_activity_main_navigation_view_contact_us">Contact us</string>
    <string name="title_menu_activity_main_navigation_view_imprint">Imprint</string>
    <string name="title_menu_activity_main_navigation_view_privacy">Privacy</string>
    <string name="title_menu_activity_main_navigation_view_projects">Projects</string>
    <string name="title_menu_activity_main_navigation_view_photo_editor_for_android">Photo Editor for Android</string>
    <string name="title_menu_activity_main_navigation_view_pspdfkit">PSPDFKit</string>
    <string name="title_menu_activity_main_navigation_view_social">Social</string>
    <string name="title_menu_activity_main_navigation_view_google_plus">Google plus</string>
    <string name="title_menu_activity_main_navigation_view_twitter">Twitter</string>
    <string name="title_menu_activity_main_navigation_view_facebook">Facebook</string>
    <string name="button_header_activity_main_navigation_view_subscribe">Subscribe</string>

    <string name="message_email_component_not_found">There is no email application installed in your device.</string>

    <string name="message_fragment_jobs_local_jobs">There was a problem getting a jobs from remote source, all jobs in this page are from local source.</string>

    <string name="message_fragment_latest_issues_local_issues">There was a problem getting an issues from remote source, all issues in this page are from local source.</string>

    <string name="button_activity_submit">Submit</string>
    <string name="hint_activity_submit_link">Link</string>
    <string name="chip_activity_submit_link">Link</string>
    <string name="chip_activity_submit_conference">Conference</string>
    <string name="title_activity_submit">What you want to submit?</string>
    <string name="label_activity_submit">Submit</string>
    <string name="validation_message_link_type">Please select link type</string>
    <string name="toast_successfully_submitted_link">You link has been successfully submitted</string>
    <string name="message_activity_submit_beta">Please note that this feature is still in beta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="search">Tìm kiếm</string>
    <string name="more">More</string>

    <string name="app_logo">app logo</string>

    <string name="need_internet">Need Internet to Work</string>
    <string name="something_wrong">Something is wrong !!</string>

    <!--    Big List Screen, Detail Big Item Screen-->
    <string name="big_list_follow_title">ĐỌC THEO</string>
    <string name="alphabet">BẢNG CHỮ CÁI</string>
    <string name="number">CHỮ SỐ</string>
    <string name="animal">ĐỘNG VẬT</string>
    <string name="fruit">CÁC LOẠI HOA QUẢ</string>
    <string name="square">HÌNH HỌC</string>
    <string name="school">ĐỒ DÙNG HỌC TẬP</string>
    <string name="color">MÀU SẮC</string>
    <string name="flower">CÁC LOẠI HOA</string>
    <string name="vehicle">GIAO THÔNG</string>
    <string name="country">QUỐC GIA</string>
    <string name="key_detail">key</string>
    <string name="follow">Đọc theo</string>
    <string name="touch">Chạm và đọc</string>
    <string name="swipe">Vuốt và đọc</string>
    <string name="test">Kiểm tra</string>
    <string name="key_home">keyy</string>
    <string name="rank">Bạng xếp hạng</string>

</resources>
